<?xml version="1.0"?>
<package format="3">
  <name>jaka_tf_tools</name>
  <version>0.0.1</version>
  <description>Minimal TF bridge for JAKA: base_link -> jaka_tcp -> camera_link, plus /joint_states relay.</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
