<?xml version="1.0"?>
<package format="3">
  <name>jaka_zu12_tf_tools</name>
  <version>0.1.0</version>
  <description>URDF + robot_state_publisher + joint_state relay for JAKA Zu12 with fixed camera frame.</description>

  <maintainer email="you@todo.todo">you</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>jaka_description</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
